--- a/src/layout/Layout.module.css
+++ b/src/layout/Layout.module.css
@@ -49,7 +49,7 @@ button {
     padding: 5px;
     padding-left: 12px;
     padding-right: 12px;
-    margin-top: 20px;
+    margin-top: 10px;
     margin-left: 10vw;
     margin-right: 10vw;
   }
@@ -59,7 +59,7 @@ button {
   }
 
   button {
-    top: 90vh;
+    top: 91vh;
     left: 65vw;
   }
 }
