--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -1,6 +1,10 @@
 .main {
   position: absolute;
-  margin-top: 130px;
+  overflow: hidden;
+
+  left: 0;
+  right: 0;
+  margin-top: 50px;
 }
 
 @media (max-width: 1025px) {
@@ -8,5 +12,8 @@
     scale: 0.8;
     z-index: -5;
     transform: rotate(3deg);
+  }
+  .main {
+    margin-top: 15vh;
   }
 }
